--- a/src/global.css
+++ b/src/global.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Raleway:wght@400;500;600;700&display=swap');
 
+
+html {
+    scroll-behavior: smooth;
+}
+
 .btn {
     padding: 0.375rem 2rem;
 }
 
 .body {
-    font-family: 'Lato', 'Raleway'
-}
-
-.row {
-    margin:auto;
+    font-family: 'Lato', 'Raleway';
 }
